# Gobanion

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.development  .env.local.example  .env.production  .env.shared  .env.staging  README.md  main.py  pyproject.toml
backend/api/: dag_router.py  plan_router.py
backend/config/: __init__.py  settings.py
backend/models/: __init__.py  dag.py
backend/prompts/: agent_error_recovery.md  agent_generate.md  agent_react.md  agent_self_check.md  agent_step_planner.md  agent_write_file.md  planner.md
backend/runner/: agent_runner.py
backend/services/: __init__.py  dag_service.py  dispatcher.py  llm_client.py  logger.py  prompt_loader.py
backend/services/agents/: master_planner.py
backend/tests/: __init__.py  _fix_logos.py  test_config.py  test_dag_service.py  test_dispatcher.py  test_integration.py  test_master_planner.py  test_plan_api.py  test_status.py  test_subprocess.py
docs/design/: 01-系统架构.md  02-记忆系统设计.md  03-Agent运行环境设计.md  04-待办清单.md  05-参考项目.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/components/: CreateModal.vue  DAGCanvas.vue  NavBar.vue  NodeSheet.vue  Sidebar.vue  StatusBadge.vue
frontend/src/types/: index.ts
